# AstatineOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOCS.md  Makefile  README.md  UPDATE.md  bochsrc.txt  boot.asm  build.config.js  build.mts  build.sh  generaldocs.md  kernel.c  package-lock.json  package.json  teletype_structures.h
cmake/: xxd.cmake
include/kernel/astatine/: device.h  drivers.h  teletype.h  types.h
include/user/astatine/: terminal.h
legacy/: Makefile
src/: modules.h
src/boot/: a20.asm  boot.asm  gdt.asm
src/bootloader_partition/boot.aex/: boot.aex.asm  build.js  graphicsmode.asm  read.asm
src/bootloader_partition/loader.aex/: build.js  fat32.c  main.c
src/bootsector/: boot.asm  build.js
src/display/: display.c  display.h
src/entry32/: gdt.asm
src/exception/: exception.c  exception.h
src/idt/: PIC.c  PIC.h  idt.c  idt.h  interrupt.h  irq.c  irq.h  isr.h
src/kernel/: kernel.c
src/kernel/display/: display.c  display.h
src/kernel/display/advanced/: graphics.c  graphics.h
src/kernel/display/simple/: display.c  display.h  newdisplay.c
src/kernel/entry32/: entry32.asm
src/kernel/exception/: exception.c  exception.h
src/kernel/fpu/: fpu.c  fpu.h
src/kernel/fungame/: fg_internal.h  fg_misc.c  fg_sprites.h  fungame.c
src/kernel/idt/: PIC.c  isr.c
src/kernel/interrupt/: PIC.c  PIC.h  idt.c  idt.h  interrupt.h  isr.c
src/kernel/kernel/: ahsh.c  kernel.c
src/kernel/keyboard/: keyboard.c  keyboard.h
src/kernel/memory/: memory.c  memory.h
src/kernel/modules/: modules.c  modules.h  strings.c  strings.h
src/kernel/pcspeaker/: pcspeaker.c  pcspeaker.h
src/kernel/process/: process.c  process.h
src/kernel/programs/basicbasic/: basicbasic.c
src/kernel/programs/fungame/: fg_internal.h  fg_misc.c  fungame.c
src/kernel/programs/netnotes/: netnotes.c
src/kernel/ps2/: controller.c  controller.h  keyboard.c  keyboard.h  manualkeyboard.h
src/kernel/timer/: PIT.c  PIT.h
src/memory/: memory.c
src/modules/: modules.c  modules.h
src/primary/drivers/display/vgabiostext/: build.js  main.c
src/primary/drivers/keyboard/ps2/: main.c
src/primary/kernel/: build.js
src/primary/kernel/basedevice/: device.c  device.h  devicelogic.h
src/primary/kernel/basedevice/discovery/: discovery.h  isadiscovery.c  pcidiscovery.c
src/primary/kernel/basedevice/subtypes/disk/: disk.h
src/primary/kernel/disk/: disk.c  disk.h
src/primary/kernel/disk/pata/: disk.c  disk.h
src/primary/kernel/display/advanced/: graphics.c
src/primary/kernel/display/simple/: display.c  display.h
src/primary/kernel/driver_base/: driver_base.c  driver_base.h  driver_base_structures.h
src/primary/kernel/driver_base/disk/: disk.c  disk.h  disk_structures.h
src/primary/kernel/driver_base/display/: display.c
src/primary/kernel/driver_base/generic/: generic.c  generic.h
src/primary/kernel/driver_base/keyboard/: keyboard.c
src/primary/kernel/driver_base/teletype/: teletype.c  teletype.h  teletype_structures.h
src/primary/kernel/elfloader/: elfloader.c  elfloader.h  elfloader_structs.h  entryuser32.asm
src/primary/kernel/entry32/: entry32.asm  help.asm
src/primary/kernel/exception/: exception.c
src/primary/kernel/fat32/: ata_lba_read_c.asm  ata_lba_write_c.asm  fat32.c  fat32.h
src/primary/kernel/gdt/: gdt.c  gdt.h  gdt_helpers.asm
src/primary/kernel/interrupt/: PIC.c  idt.c  isr.c
src/primary/kernel/kernel/: ahsh.c  entryuser32.asm  kernel.c
src/primary/kernel/memory/: load_page_directory.asm  malloc.c  malloc.h  memory.c  memory.h  paging.c  paging.h
src/primary/kernel/modules/: dynarray.c  dynarray.h  modules.c  modules.h  strings.c  strings.h
src/primary/kernel/pcspeaker/: pcspeaker.c  pcspeaker.h
src/primary/kernel/programs/basicbasic/: basicbasic.h
src/primary/kernel/programs/fungame/: fungame.c
src/primary/kernel/programs/netnotes/: netnotes.h
src/primary/kernel/ps2/: controller.c  keyboard.c
src/primary/kernel/systemcalls/: syscall.c  syscall.h
src/primary/kernel/systemcalls/calls/: abort.c  calls.c  calls.h  loadnew.c  open.c  read.c  sbrk.c  setmode.c  write.c
src/primary/kernel/terminal/: terminal.c  terminal.h
src/primary/kernel/terminal/advanced/: advanced.c
src/primary/kernel/timer/: PIT.c  PIT.h
src/primary/kernel/vfs/: vfs.c
src/primary/keyboard_drivers/ps2/: controller.c  manualkeyboard.h
src/primary/programs/: DIRECTIVE  build.js  elf.h  main.c
src/primary/programs/programs/basicbasic/: basicbasic.c  build.js
src/primary/programs/programs/fungame/: fungame.h
src/primary/programs/programs/netnotes/: netnotes.c
src/primary/static/: atf.aex  build.js  generalfile  musictrack
src/stage2/: a20.asm  boot.aex.asm  gdt.asm  read.asm  vbr.asm
src/stage2/otherfiles/: ata_lba_read_c.asm  entry.asm  fat32.c  fat32.h
utilities/mkabp/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  default.asm  default.h  mkabp.c
utilities/mkabp/src/: default.asm  mkabp.c
utilities/mkabp/testfolder/: BOOT.AEX  boot.aex.asm  file.txt  twofile.txt.txt
